--- a/main.html
+++ b/main.html
@@ -1,16 +1,79 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-<html>
+      body {
+        background-color: gray;
+        text-align: center;
+      }
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+      main {
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+        flex-wrap: wrap;
+        margin: 30px 40px;
+      }
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+      section {
+        width: 200px;
+        background-color: white;
+        color: black;
+        padding: 25px;
+        margin: 10px;
+      }
 
-</body>
+      h2 {
+        margin-bottom: 20px;
+      }
 
+      article {
+        margin: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- the entire body must be written by student -->
+
+    <main>
+      <section>
+        <h2>News</h2>
+        <article>Article 1</article>
+        <article>Article 2</article>
+        <article>Article 3</article>
+        <article>Article 4</article>
+      </section>
+      <section>
+        <h2>Reviews</h2>
+        <article>Article 1</article>
+        <article>Article 2</article>
+      </section>
+      <section>
+        <h2>Tips & Tricks</h2>
+        <article>Article 1</article>
+        <article>Article 2</article>
+        <article>Article 3</article>
+      </section>
+      <section>
+        <h2>Interviews</h2>
+        <article>Article 1</article>
+        <article>Article 2</article>
+        <article>Article 3</article>
+        <article>Article 4</article>
+        <article>Article 5</article>
+      </section>
+    </main>
+
+    <script src="script.js" type="text/javascript"></script>
+  </body>
 </html>
