--- a/main.html
+++ b/main.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <style>
       * {
         margin: 0;
@@ -42,6 +40,7 @@
       }
     </style>
   </head>
+
   <body>
     <!-- the entire body must be written by student -->
 
@@ -74,6 +73,6 @@
       </section>
     </main>
 
-    <script src="script.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
