--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
       }
 
       body {
-        background-color: gray;
+        background-color: lightgray;
         text-align: center;
       }
 
