--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       * {
         margin: 0;
@@ -23,12 +23,13 @@
         margin: 30px 40px;
       }
 
-      section {
+      .blog-column {
         width: 200px;
         background-color: white;
         color: black;
         padding: 25px;
         margin: 10px;
+        height: inherit;
       }
 
       h2 {
@@ -38,6 +39,14 @@
       article {
         margin: 10px;
       }
+
+      ul {
+        list-style-type: none;
+      }
+
+      li {
+        padding: 5px;
+      }
     </style>
   </head>
 
@@ -45,31 +54,47 @@
     <!-- the entire body must be written by student -->
 
     <main>
-      <section>
+      <section class="blog-column">
         <h2>News</h2>
-        <article>Article 1</article>
-        <article>Article 2</article>
-        <article>Article 3</article>
-        <article>Article 4</article>
+        <article>
+          <ul>
+            <li>Article 1</li>
+            <li>Article 2</li>
+            <li>Article 3</li>
+            <li>Article 4</li>
+          </ul>
+        </article>
       </section>
-      <section>
+      <section class="blog-column">
         <h2>Reviews</h2>
-        <article>Article 1</article>
-        <article>Article 2</article>
+        <article>
+          <ul>
+            <li>Article 1</li>
+            <li>Article 2</li>
+          </ul>
+        </article>
       </section>
-      <section>
+      <section class="blog-column">
         <h2>Tips & Tricks</h2>
-        <article>Article 1</article>
-        <article>Article 2</article>
-        <article>Article 3</article>
+        <article>
+          <ul>
+            <li>Article 1</li>
+            <li>Article 2</li>
+            <li>Article 3</li>
+          </ul>
+        </article>
       </section>
-      <section>
+      <section class="blog-column">
         <h2>Interviews</h2>
-        <article>Article 1</article>
-        <article>Article 2</article>
-        <article>Article 3</article>
-        <article>Article 4</article>
-        <article>Article 5</article>
+        <article>
+          <ul>
+            <li>Article 1</li>
+            <li>Article 2</li>
+            <li>Article 3</li>
+            <li>Article 4</li>
+            <li>Article 5</li>
+          </ul>
+        </article>
       </section>
     </main>
 
